fix horizontal scrollbar issue on mobile

--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -1,6 +1,5 @@
 @import "../../sass/variables";
 .HomePage {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,6 +34,5 @@
   }
   @media only screen and (min-width: $mobileBreakpoint) {
     height: 100vh;
-    width: initial;
   }
 }
